# ZenFlow

./: .gitignore  AGENTS.md  PLAN.md  PRD.md  README.md  algorithm.py  config.py  engine.py  justfile  main.py  preferences.txt  schema.sql  test_rss.xml  zenflow.db
arxiv2text/: Cargo.toml
arxiv2text/src/: main.rs
arxiv2text/src/extractor/: html.rs  latex2text.rs  mod.rs
python_prototype/: engine.py  pyproject.toml  schema.sql
src-tauri/: package-lock.json  package.json
src-tauri/src/: App.css  App.tsx
src-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src-tauri/src/: config.rs  lib.rs  main.rs  scheduler.rs  settings.rs
src-tauri/src-tauri/src/algorithm/: cluster.rs  mod.rs  score.rs
src-tauri/src-tauri/src/commands/: article.rs  extract.rs  init.rs  mod.rs
src-tauri/src-tauri/src/db/: mod.rs  operations.rs  pool.rs  schema.rs
src-tauri/src-tauri/src/embedding/: client.rs  mod.rs
src-tauri/src-tauri/src/extractor/: checker.rs  html.rs  latex2text.rs  mod.rs  tex.rs
src-tauri/src-tauri/src/feed/: fetcher.rs  mod.rs
src-tauri/src-tauri/src/llm/: client.rs  mod.rs  preferences.rs  scoring.rs
src-tauri/src/components/: ArticleCard.css  ArticleCard.tsx  ArticleList.tsx  DateGroupedArticleList.tsx  SettingsModal.css  SettingsModal.tsx  WelcomeWizard.css  WelcomeWizard.tsx
src-tauri/src/hooks/: useArticles.ts
src-tauri/src/types/: article.ts
