[package]
name = "arxiv2text"
version = "0.1.0"
edition = "2021"
description = "Extract plain text from arXiv papers (HTML-first with TeX fallback)"

[lib]
name = "arxiv2text"
path = "src/lib.rs"

[[bin]]
name = "arxiv2text"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [] }
anyhow = "1"
regex = "1"
flate2 = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
